--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
   "dependencies": {
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.3",
+    "babel-plugin-glsl": "^1.0.0",
+    "babel-plugin-macros": "^3.1.0",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
+    "leva": "^0.9.35",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "three": "^0.164.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "glslify-loader": "^2.0.0",
     "sass": "^1.76.0"
   }
 }
